--- a/index.html
+++ b/index.html
@@ -6,9 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final Project</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
 </head>
 <body>
+    <nav>
+        <a href="index.html"><img src="img/logo 2.png" alt="site logo" height="80px"></a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><div class="dropdown">
+            <button class="dropbtn">Explore More
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+              <a href="#">Blog</a>
+              <a href="#">Gallery</a>
+              <a href="#">Community</a>
+            </div>
+          </div></li>
+        </ul>
+    </nav>
+
+    <header>
+        <div class="hero-image">
+            <div class="hero-text">
+                <h1 style="font-size: 50px;">Trixy Parra</h1>
+                <h3>Lifestyle Blog</h3>
+            </div>
+        </div>
+
+    </header>
+
+    <footer>
+        <p>&copy; 2022</p>
+    </footer>
     
 </body>
 </html>
