--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Final Project</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta charset="UTF-8">
     
 </head>
-<body>
+<body>   
     <nav>
-        <a href="index.html"><img src="img/logo 2.png" alt="site logo" height="80px"></a>
+        <a href="index.html"><img src="img/logo4.png" alt="site logo" height="80px"></a>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><div class="dropdown">
@@ -32,12 +33,24 @@
     <header>
         <div class="hero-image">
             <div class="hero-text">
-                <h1 style="font-size: 50px;">Trixy Parra</h1>
-                <h3>Lifestyle Blog</h3>
+                <h1 style="font-size: 50px;">ATRE&#769;VETE</h1>
+                <h3>A Lifestyle Blog</h3>
             </div>
         </div>
-
     </header>
+
+    <div class="welcome">
+      <h2>Welcome to Atre&#769vete!</h2>
+      <p><b>Atre&#769vete means to "dare yourself." When was the last time you dared yourself to anything? I am always up for trying something new, exploring, and adventure! If you are too, you've come to the right place as I will share with you through my everyday experiences.</b>
+      <p><b>Join me on this journey and Thank You for stopping by!</b>
+      </p>
+    </div>
+
+    <div class="featured">
+      <h2>Featured Trip</h2>
+      <p>&#128205; Bryce Canyon National Park, Utah</p>
+      
+    </div>
 
     <footer>
         <p>&copy; 2022</p>
