--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </div>
     </header>
 
+    <!-- Main -->
     <div class="welcome">
       <h2>Welcome to Atre&#769vete!</h2>
       <p><b>Atre&#769vete means to "dare yourself." When was the last time you dared yourself to anything? I am always up for trying something new, exploring, and adventure! If you are too, you've come to the right place as I will share with you through my everyday experiences.</b>
@@ -49,6 +50,27 @@
     <div class="featured">
       <h2>Featured Trip</h2>
       <p>&#128205; Bryce Canyon National Park, Utah</p>
+      
+      <div class="row">
+        <div class="polaroid">
+          <img src="img/hero-rock-view.jpg" alt="Thors Hammer" style="width: 100%;">
+          <div class="caption">
+          <p><b>Thors Hammer</b></p>
+          </div>
+        </div>
+        <div class="polaroid">
+          <img src="img/hero-rock-view.jpg" alt="Waterfall" style="width: 100%;">
+          <div class="caption">
+            <p><b>Waterfall</b></p>
+          </div>
+        </div>
+        <div class="polaroid">
+          <img src="img/hero-rock-view.jpg" alt="Other" style="width: 100%;">
+          <div class="caption">
+            <p><b>Other</b></p>
+          </div>
+        </div>
+      </div>
       
     </div>
 
