--- a/about.html
+++ b/about.html
@@ -38,18 +38,27 @@
         </div>
     </header>
 
-    <main>
-      <p>Welcome, everyone! Bienvenidos! My name is Trixy Parra and I'm super excited for you to join us here in Atre&#769vete! 
+    <section id="about">
+      <div class="about-image">
+        <img src="/img/about-photo.jpg" alt="About Photo" height="300px" style="border: 7px double white;">
+      </div>
+      <div class="about-description">
+        <p id="first">Welcome, everyone! Bienvenidos! My name is Trixy Parra and I'm super excited for you to join us here in Atre&#769vete!
+        </p>
 
-      So a bit about myself, I was born and raised in Los Angeles. My parents are from Colombia and Ecuador. My grandparents are as well although, two of them are from Brazil and Spain. Pretty cool, right? I thought so too! I'm the youngest of five, I have one brother and 3 sisters. But, over the years my family has grown more and more with my beautiful niece, nephews, and my siblings' partners. I have a degree in Sociology. I am currently exploring the field of tech and let me tell you, it's been an interesting and amazing experience so far! Pretty brief but, I think I covered most of the main topics for a brief bio! Through this journey, you'll learn more and have more insight about me so stay tuned!
+        <p id="middle">So a bit about myself, I was born and raised in Los Angeles. My parents are from Colombia and Ecuador. My grandparents are as well although, two of them are from Brazil and Spain. Pretty cool, right? I thought so too! I'm the youngest of five, I have one brother and 3 sisters. But, over the years my family has grown more and more with my beautiful niece, nephews, and my siblings' partners. I have a degree in Sociology. I am currently exploring the field of tech and let me tell you, it's been an interesting and amazing experience so far! Pretty brief but, I think I covered most of the main topics for a brief bio! Through this journey, you'll learn more and have more insight about me so stay tuned!
+        </p>
       
-      So why <b>Atre&#769vete</b>? Atre&#769vete means to "dare yourself." I'm always up for trying something new, exploring, and adventure! As much as we want to do all these things, there are times where something is holding us back and/or as many of us tend to do, we keep postponing for later and then later and again, later. Guilty! So the question is, what is holding you back? There are so many things we can control in life but time is not one of them. If there's one thing I learned from this pandemic, is to live life on the daily beacause truthfully, you just never know! It doesn't have to be a trip across the country or the other side of the world. And if it is, go for it! But it can also be as simple as trying a new restaurant, going for a hike, having a full day to yourself for self-care, learning a new recipe, trying a new hobby, learning to dance, volunteering, giving back, learning about a new culture or language . . . whatever it is, do it! Even if it's something you never thought you'd try or do, you may be surprised how much you'll actually enjoy it. So why not? There's so much to do, so much to try, so much to explore! The possibilities are endless! But it is up to you to put of your part and go for it!
+        <p id="middle">So why <b>Atre&#769vete</b>? Atre&#769vete means to <b>"dare yourself."</b> I'm always up for trying something new, exploring, and adventure! As much as we want to do all these things, there are times where something is holding us back and/or as many of us tend to do, we keep postponing for later and then later and again, later. Guilty! So the question is, what is holding you back? There are so many things we can control in life but time is not one of them. If there's one thing I learned from this pandemic, is to live life on the daily beacause truthfully, you just never know! It doesn't have to be a trip across the country or the other side of the world. And if it is, go for it! But it can also be as simple as trying a new restaurant, going for a hike, having a full day to yourself for self-care, learning a new recipe, trying a new hobby, learning to dance, volunteering, giving back, learning about a new culture or language . . . whatever it is, do it! Even if it's something you never thought you'd try or do, you may be surprised how much you'll actually enjoy it. So why not? There's so much to do, so much to try, so much to explore! The possibilities are endless! But it is up to you to put of your part and go for it!
+        </p>
 
-      Here in Atreve&#769vete I will share my journey of explorations and adventures with as much of a thorough insight I can give you of my experiences through the upcoming blogs, photo albums within the gallery, weekly features on the main page, and of course, the community page. Here, you'll be able to join a community sharing their own journies through their adventures and experiences, locally and around the world. In the meantime, whether it's on here or through any of our linked socials, Let's Connect! I'd love to hear from you!
+        <p id="middle">Here in Atreve&#769vete I will share my journey of explorations and adventures with as much of a thorough insight I can give you of my experiences through the upcoming blogs, photo albums within the gallery, weekly features on the main page, and of course, the community page. Here, you'll be able to join a community sharing their own journies through their adventures and experiences, locally and around the world. In the meantime, whether it's on here or through any of our linked socials, Let's Connect! I'd love to hear from you!
+        </p>
 
-      So with that being said, <b>Atreve&#769vete!</b> 
-      </p>
-    </main>
+        <p id="last">So with that being said, <b>ATRE&#769VETE!</b> 
+        </p>
+      </div>
+    </section>
 
     <footer>
         <p>&copy; 2022</p>
