Updated Feature section title, did quote, started audio/video layout, created extra dropdown link pages,added to footer, word change in About description, updated css

--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a class="active" href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
           <li><div class="dropdown">
             <button class="dropbtn">Explore More
               <i class="fa fa-caret-down"></i>
@@ -29,38 +29,15 @@
         </ul>
     </nav>
 
-    <header>
-        <div class="hero-image">
+    <header id="header-dropdown">
+        <div class="hero-image-coming-soon">
             <div class="hero-text">
-                <h1 style="font-size: 50px;">CONTACT</h1>
+                <h1 style="font-size: 50px;">Blog - Coming Soon!</h1>
             </div>
         </div>
     </header>
 
-    <h3 class="contact-heading">
-      Please fill in the Contact Form below. I'd love to hear from you!
-    </h3>
-
-    <div class="contact-container">
-      <form action="/action_page.php">
-        <label for="firstname">First Name:</label>
-        <input type="text" id="firstname" name="firstname" placeholder="Enter First Name">
-
-        <label for="last-name">Last Name:</label>
-        <input type="text" id="last-name" name="lastname" placeholder="Enter Last Name">
-
-        <label for="email">Email:</label>
-        <input type="text" id="email" name="email" placeholder="Enter Email">
-
-        <label for="location">Location:</label>
-        <input type="text" id="location" name="location" placeholder="City, State, Country, and/or Zip Code">
-
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" placeholder="Enter Message" style="height: 200px;"></textarea>
-
-        <input type="submit" value="Submit">
-      </form>
-    </div>
+    
 
     <footer>
         <p>&copy; 2022</p>
