finished Featured description and format, fixed About, updated css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="hero-image">
             <div class="hero-text">
                 <h1 style="font-size: 50px;">ATRE&#769;VETE</h1>
-                <h3>A Lifestyle Blog</h3>
+                <h3>A &nbsp;Lifestyle &nbsp;Blog</h3>
             </div>
         </div>
     </header>
@@ -70,18 +70,21 @@
         </div>
       </div>
       <div class="polaroid">
-        <img src="img/featured-bryce-amphitheater.jpg" alt="Bryce Canyon Amphitheater" style="width: 100%;">
+        <img src="img/featured-bryce-amphitheater.jpg" alt="Bryce Amphitheater" style="width: 100%;">
         <div class="caption">
-          <p><b>Bryce Canyon Amphitheater</b></p>
+          <p><b>Bryce Amphitheater</b></p>
         </div>
       </div>
     </div>
 
     <div class="row-two">
       <div class="featured-description">
-        <a href="https://www.nps.gov/brca/index.htm"><i class="fas fa-thin fa-map-location-dot"></i></a>
-        <h3>About this Trip</h3>
-        <p>My trip to Bryce Canyon was more than I could have imagined. Above, I shared three of some of the most beatiful views within this national park. It was hard to choose but stay tuned for more pictures which will be located in this trip's album in the Gallery page. </p>
+        <h3><a href="https://www.nps.gov/brca/index.htm"><i class="fas fa-thin fa-map-location-dot"></i></a> &nbsp;About This Trip</h3>
+        <p>My trip to Bryce Canyon was more than I could have imagined. It was breathtaking! There are many trails and viewpoints to enjoy its beautiful scenery of hoodoos, unique rock formations, and more. You are guaranteed to have something to explore and enjoy whether you are visiting for a day or more. 
+        <p>Above, I shared three of some of the most beatiful views within this national park. Natural Bridge, Thor's Hammer, and the Bryce Amphitheater. The views are far more beautiful and amazing in person! <b>Natural Bridge</b> is one of the park's highlights as it is one of the natural arches within the park. You get a peek of the Ponderosa forest through the arch and behind the bridge. Marvel fans, you're going to love the next one. <b>Thor's Hammer!</b> Definitely one of my favorites! So why the name? If you look closely, the highest hoodoo emphasized in the picture has a close appearance to that of Thor's hammer, the God of Thunder. It's certainly a magical, powerful view! The <b>Bryce Amphitheater</b> is another highlight at Bryce Canyon. It has the largest amount of hoodos grouped in one area not only in this park but in the whole world. You're definitely in for a view at the Bryce Amphitheater!
+        </p>
+        <p>I truly enjoyed exploring Bryce Canyon! One of the longest and most beautiful hikes I've done filled with spectacular views all around! Stay tuned for more pictures which will be located in this trip's album in the Gallery page and more details about this trip in the Blog page, also coming soon. For more details of this park, click the icon next to "About This Trip" and/or the map of this national park in Utah. I highly recommend visiting and exploring Bryce Canyon National Park!
+        </p>
       </div>
       <div class="featured-description">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d202382.46025549553!2d-112.31839795145056!3d37.57329698675248!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87356bc602c3eb2d%3A0x6be9d8fbbeac6d06!2sBryce%20Canyon%20National%20Park!5e0!3m2!1sen!2sus!4v1648376953646!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -93,7 +96,7 @@
     <!-- Playlist/Song and Video of the Week  -->
     <div class="recommendation">
     <div class="audio-rec">
-      <h2>Song of the Week</h2>
+      <h2>Playlist of the Week</h2>
 
     </div>
     <!-- <div class="vertical-line"></div> -->
