added required oon end of input tags on the contact form, added and finished song and video recommendations with description and format, added paper plane on footer of all pages, added one font on head section, changed logo to new one with new font, updated css

--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,7 @@
         <a class="footer-links" href="gallery.html">Gallery</a></li>
         <a class="footer-links" href="community.html">Community</a>
       </div>
-      <p><b>&copy; 2022 | Atre&#769vete</b></p>
+      <p><b>&copy; 2022 | Atre&#769vete</b> <i class="fas fa-light fa-paper-plane"></i></p>
     </footer>
     
 </body>
