--- a/community.html
+++ b/community.html
@@ -56,7 +56,7 @@
         <a class="footer-links" href="gallery.html">Gallery</a></li>
         <a class="footer-links" href="community.html">Community</a>
       </div>
-      <p><b>&copy; 2022 | Atre&#769vete</b></p>
+      <p><b>&copy; 2022 | Atre&#769vete</b> <i class="fas fa-light fa-paper-plane"></i></p>
     </footer>
     
 </body>
