--- a/contact.html
+++ b/contact.html
@@ -44,18 +44,19 @@
     </h3>
 
     <div class="contact-container">
-      <form action="/action_page.php">
+      <!-- <form action="/action_page.php"> -->
+      <form action="">
         <label for="firstname">First Name:</label>
-        <input type="text" id="firstname" name="firstname" placeholder="Enter First Name">
+        <input type="text" id="firstname" name="firstname" placeholder="Enter First Name" required>
 
         <label for="last-name">Last Name:</label>
-        <input type="text" id="last-name" name="lastname" placeholder="Enter Last Name">
+        <input type="text" id="last-name" name="lastname" placeholder="Enter Last Name" required>
 
         <label for="email">Email:</label>
-        <input type="text" id="email" name="email" placeholder="Enter Email">
+        <input type="text" id="email" name="email" placeholder="Enter Email" required>
 
         <label for="location">Location:</label>
-        <input type="text" id="location" name="location" placeholder="City, State, Country, and/or Zip Code">
+        <input type="text" id="location" name="location" placeholder="City, State, Country, and/or Zip Code" required>
 
         <label for="message">Message:</label>
         <textarea id="message" name="message" placeholder="Enter Message" style="height: 200px;"></textarea>
@@ -81,7 +82,7 @@
         <a class="footer-links" href="gallery.html">Gallery</a></li>
         <a class="footer-links" href="community.html">Community</a>
       </div>
-      <p><b>&copy; 2022 | Atre&#769vete</b></p>
+      <p><b>&copy; 2022 | Atre&#769vete</b> <i class="fas fa-light fa-paper-plane"></i></p>
     </footer>
     
 </body>
