--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
     <script src="https://kit.fontawesome.com/c8e18aa0a2.js" crossorigin="anonymous"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
     
 </head>
 <body>   
     <nav>
-        <a href="index.html"><img src="img/logo4.png" alt="site logo" height="80px"></a>
+        <a href="index.html"><img src="img/logo5.png" alt="site logo" height="80px"></a>
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
@@ -95,18 +99,21 @@
 
     <!-- Playlist/Song and Video of the Week  -->
     <div class="recommendation">
-    <div class="audio-rec">
-      <h2>Playlist of the Week</h2>
+      <div class="audio-rec">
+        <h2>- Music Playlist of the Week -</h2>
+        <iframe width="560" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/279486998&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/dj-inlatin" title="DJ INLATIN" target="_blank" style="color: #cccccc; text-decoration: none;">DJ INLATIN</a> · <a href="https://soundcloud.com/dj-inlatin/colombian-salsa-mix-1-dj-inlatin" title="COLOMBIAN SALSA MIX 1 - DJ INLATIN" target="_blank" style="color: #cccccc; text-decoration: none;">COLOMBIAN SALSA MIX 1 - DJ INLATIN</a></div>
+        <p>This week's music recommendation is a mix of Colombian salsa. I enjoy listening to different genres of music and Salsa is definitely one of them! The different beats and rhythm to it, it's just so much fun to listen to. I grew up listening to this style of music because of my parents but especially my dad. He's definitely a <em>salsero</em>. What genre(s) of music do you enjoy listening to?
+        </p>
+      </div>
 
-    </div>
-    <!-- <div class="vertical-line"></div> -->
-    <div class="video-rec">
-      <h2>Video of the Week</h2>
-
-    </div>
+      <div class="video-rec">
+        <h2>- Video of the Week -</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLykzf464sU9_BK0qS0zQIxvQBr8LgUD_U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>This week's video recommendation is from "The Tonight Show with Jimmy Fallon." Above is a playlist of videos in which Jimmy Fallon and his guest of the night play a game called "Can You Feel It?" Both Jimmy Fallon and his guest have to guess what he/she is touching without seeing what is inside the box. It's definitely a daring game! Would you play it?
+        </p>
+      </div>
     </div>
     
-
     <!-- Quote of the Week -->
     <div class="quote">
       <h3>- Quote of the Week -</h3>
