added a second font - incorporated both fonts in all pages and sections, updated Head with all the linking link tags, adjusted some letter spacing and line height with new fonts, changed text colors on some sections - featured description and recommendation descriptions, updated css

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +9,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
     <script src="https://kit.fontawesome.com/c8e18aa0a2.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Lato&display=swap" rel="stylesheet">
     
 </head>
 <body>   
     <nav>
-        <a href="index.html"><img src="img/logo4.png" alt="site logo" height="80px"></a>
+        <a href="index.html"><img src="img/logo5.png" alt="site logo" height="80px"></a>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a class="active" href="about.html">About</a></li>
