removed forward slash on about image

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
     <section id="about">
       <div class="about-image">
-        <img src="/img/about-photo.jpg" alt="About Photo" height="300px" style="border: 7px double white;">
+        <img src="img/about-photo.jpg" alt="About Photo" height="300px" style="border: 7px double white;">
       </div>
       <div class="about-description">
         <p id="first">Welcome, everyone! Bienvenidos! My name is Trixy Parra and I'm super excited for you to join us here in Atre&#769vete!
